switch to the proper notify alias now that the build is setup

--- a/.travis.yml
+++ b/.travis.yml
@@ -7,4 +7,4 @@ before_install:
   - ./script/travis_redis_install
 notifications:
   email:
-    - proby@seomoz.org
+    - moz-platform-dev@seomoz.org
