--- a/.travis.yml
+++ b/.travis.yml
@@ -3,8 +3,15 @@ bundler_args: --without extras
 rvm:
   - 1.9.2
   - 1.9.3
+  - jruby-19mode
+  - rbx-19mode
 before_install:
   - curl -s https://raw.github.com/seomoz/qless-core/master/scripts/install_and_run_redis_2_6 | sh
 notifications:
   email:
     - moz-platform-dev@seomoz.org
+matrix:
+  allow_failures:
+    - rvm: jruby-19mode
+    - rvm: rbx-19mode
+
