--- a/.travis.yml
+++ b/.travis.yml
@@ -3,6 +3,7 @@ bundler_args: --without extras
 rvm:
   - 1.9.2
   - 1.9.3
+  - 2.0.0
   - jruby-19mode
   - rbx-19mode
 services:
@@ -12,6 +13,7 @@ notifications:
     - moz-platform-dev@seomoz.org
 matrix:
   allow_failures:
+    - rvm: 2.0.0
     - rvm: jruby-19mode
     - rvm: rbx-19mode
 
