--- a/.travis.yml
+++ b/.travis.yml
@@ -1,5 +1,5 @@
 language: ruby
-bundler_args: --without extras
+bundler_args: --without extras --standalone --binstubs
 rvm:
   - 1.9.2
   - 1.9.3
@@ -8,6 +8,7 @@ rvm:
   - rbx-19mode
 services:
   - redis-server
+script: bin/rake ci --trace
 notifications:
   email:
     - moz-platform-dev@seomoz.org
