--- a/.travis.yml
+++ b/.travis.yml
@@ -4,16 +4,16 @@ rvm:
   - 1.9.2
   - 1.9.3
   - 2.0.0
-  - jruby-19mode
-  - rbx-19mode
+  #- jruby-19mode
+  #- rbx-19mode
 services:
   - redis-server
 script: bin/rake ci --trace
 notifications:
   email:
     - moz-platform-dev@seomoz.org
-matrix:
-  allow_failures:
-    - rvm: 2.0.0
-    - rvm: rbx-19mode
+#matrix:
+  #allow_failures:
+    #- rvm: 2.0.0
+    #- rvm: rbx-19mode
 
