--- a/.travis.yml
+++ b/.travis.yml
@@ -4,8 +4,10 @@ rvm:
   - 1.9.2
   - 1.9.3
   - 2.0.0
+  - 2.1.0
+  - 2.1.1
   - jruby-19mode
-  - rbx-19mode
+  - rbx
 services:
   - redis-server
 script: bin/rake ci --trace
@@ -14,5 +16,5 @@ notifications:
     - moz-platform-dev@seomoz.org
 matrix:
   allow_failures:
-    - rvm: rbx-19mode
+    - rvm: rbx
 
