--- a/.travis.yml
+++ b/.travis.yml
@@ -1,12 +1,10 @@
 language: ruby
 bundler_args: --without extras --standalone --binstubs
 rvm:
-  - 1.9.2
-  - 1.9.3
-  - 2.0.0
   - 2.1.0
   - 2.1.1
-  - jruby-19mode
+  - 2.1.2
+  - jruby
   - rbx
 services:
   - redis-server
@@ -15,6 +13,7 @@ notifications:
   email:
     - moz-platform-dev@seomoz.org
 matrix:
+  # These fail because of keyword arguments.
   allow_failures:
     - rvm: rbx
-
+    - rvm: jruby
